Fixed text spilling and chat
Fixed comments and project body text spilling out of their containers. Also fixed issue of chat box scaling really small.

--- a/public/css/application.css
+++ b/public/css/application.css
@@ -82,7 +82,7 @@
     font-size: 12px;
     line-height: 22px;
     color: #666;
-    max-width: 290px;
+    width: 290px;
 }
 
 .project-chat header {
